<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
             android:background="@drawable/noodid">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:singleLine="false"
                android:id="@+id/harjutusekirjeldus"
                android:hint="@string/harjutuse_mida_harjutasid_vihje"
                android:maxLength="64"
                android:inputType="textCapSentences|textMultiLine"/>
            <TableLayout android:id="@+id/harjutuseandmed"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/horisontaalne_aaris"
                         android:layout_below="@id/harjutusekirjeldus">
            <TableRow android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/horisontaalne_aaris"
                      android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          android:text="@string/harjutus_algas"/>
                <TextView android:id="@+id/alguskuupaev"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          style="@android:style/Widget.Holo.Spinner"/>
                <TextView android:id="@+id/alguskellaaeg"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          style="@android:style/Widget.Holo.Spinner"/>
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/horisontaalne_aaris"
                      android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          android:text="@string/harjutus_loppes"/>
                <TextView android:id="@+id/lopukuupaev"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          style="@android:style/Widget.Holo.Spinner"/>
                <TextView android:id="@+id/lopukellaaeg"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          style="@android:style/Widget.Holo.Spinner"/>
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          android:text="@string/harjutuse_kestus"/>
                <TextView android:id="@+id/pikkusminutites"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          style="@android:style/Widget.Holo.Spinner"
                          android:text=""/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="0dp"
                          android:text="@string/harjutus_minutit"/>
            </TableRow>
            </TableLayout>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/harjutuseandmed"
                      android:layout_alignParentBottom="true"
                      android:gravity="bottom"
                      android:layout_margin="12dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:text="@string/lisatehtudharjutustjuhend"/>
        </RelativeLayout>
</ScrollView>