<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
            android:id="@+id/kustutateos"
            android:title="@string/kusututa"
            android:icon="@drawable/ic_delete_black"
            app:showAsAction="always"
            android:orderInCategory="201"/>
    <item
            android:id="@+id/alustauut"
            android:title="@string/AlustaUutHarjutust"
            android:icon="@drawable/ic_query_builder_black"
            app:showAsAction="always"
            android:orderInCategory="202"/>
    <item
            android:id="@+id/lisatehtud"
            android:title="@string/LisaTehtudHarjutus"
            android:icon="@drawable/ic_add_black"
            app:showAsAction="always"
            android:orderInCategory="203"/>

</menu>