<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/harjutua_list"
                                        android:name="com.vaskjala.vesiroosi20.pillipaevik.TeosListActivity"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="16dp"
                                        android:layout_marginRight="16dp"
                                        app:layoutManager="LinearLayoutManager"
                                        tools:context=".TeosListActivity"
                                        tools:listitem="@layout/teos_list_rida"/>
